tests/ui/const-generics/gca/dyn-compat-generic-non-type-assoc-const.stderr
error[E0038]: the trait `Trait` is not dyn compatible
  --> $DIR/dyn-compat-generic-non-type-assoc-const.rs:16:16
   |
LL |     let _: dyn Trait;
   |                ^^^^^ `Trait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/dyn-compat-generic-non-type-assoc-const.rs:11:11
   |
LL | trait Trait {
   |       ----- this trait is not dyn compatible...
LL |     const ASSOC<const N: usize>: usize;
   |           ^^^^^ ...because it contains generic associated const `ASSOC`
   = help: consider moving `ASSOC` to another trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
